# upnp-controller

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  lan-direct.xml
.github/workflows/: ci.yaml  release.yaml
chart/upnp-controller/: Chart.yaml  values.yaml
chart/upnp-controller/templates/: clusterrole.yaml  crds.yaml  deployment.yaml  rbac.yaml  serviceaccount.yaml
config/crd/: kustomization.yaml
config/crd/bases/: upnp-controller.io_gatewaystatuses.yaml  upnp-controller.io_portmappings.yaml  upnp.k8s.io_gatewaystatuses.yaml  upnp.k8s.io_portmappings.yaml
config/default/: kustomization.yaml
config/manager/: kustomization.yaml  manager.yaml
config/rbac/: kustomization.yaml  namespace.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: portmapping_minecraft.yaml
docs/: architecture.md  crds.md  deployment.md
k3s/: cloud-init-agent.yaml  cloud-init-server.yaml  mgmt-network.xml  setup.sh  teardown.sh
src/: config.rs  lib.rs  main.rs  metrics.rs  node.rs  proxy.rs
src/controllers/: dns_endpoint_ctrl.rs  gateway_ctrl.rs  mod.rs  port_mapping_ctrl.rs
src/crds/: gateway_status.rs  mod.rs  port_mapping.rs
src/upnp/: discovery.rs  eventing.rs  mod.rs  port_mapping.rs
tests/: e2e_controller.rs  e2e_gateway_status.rs  e2e_port_mapping.rs  gateway_status_test.rs  port_mapping_test.rs  upnp_mock.rs
